--- a/.github/workflows/prod_image-caption-generator.yml
+++ b/.github/workflows/prod_image-caption-generator.yml
@@ -28,6 +28,10 @@ jobs:
       with:
         platform: python
         platform-version: '3.7'
+        
+    - name: Download model files
+      run: |
+        bash setup.sh
 
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
