--- a/.github/workflows/prod_image-caption-generator.yml
+++ b/.github/workflows/prod_image-caption-generator.yml
@@ -35,7 +35,8 @@ jobs:
     
     - name: Run tests
       run: |
-        python manage.py test
+        pipenv install
+        pipenv run python manage.py test
 
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
