--- a/.github/workflows/prod_image-caption-generator.yml
+++ b/.github/workflows/prod_image-caption-generator.yml
@@ -35,6 +35,7 @@ jobs:
     
     - name: Run tests
       run: |
+        pip install pipenv
         pipenv install
         pipenv run python manage.py test
 
