--- a/.github/workflows/prod_image-caption-generator.yml
+++ b/.github/workflows/prod_image-caption-generator.yml
@@ -22,6 +22,16 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.7'
+        
+    - name: Download model files
+      run: |
+        bash setup.sh
+    
+    - name: Run tests
+      run: |
+        pip install pipenv
+        pipenv install
+        pipenv run python manage.py test
 
     - name: Build using AppService-Build
       uses: azure/appservice-build@v2
